Fixed collapse button

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,12 +186,13 @@ a, a:hover, a:focus {
     transition: all 0.3s;
 }
 
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
+nav {
+    padding: 10px 10px;
+    margin-left: -20px;
+}
+
+.sticky-top {
+    z-index: 0;
 }
 
 .btn-purple {
